data/derived/sp14/progs/unify/prog0019.ml.out
Characters 80-96:
  then (listReverse tl) :: hd
       ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
